[workspace]
members = ["esperto", "esperto-macros"]

resolver = "3"

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/KayJay7/esperto.git"
description = "esperto input system implementation"
homepage = "https://github.com/KayJay7/esperto"
readme = "README.md"
