[package]
name = "esperto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "esperto input system implementation"
homepage.workspace = true
readme = "README.md"


[features]
serde = ["dep:serde"]
demo = ["serde", "dep:sdl3", "dep:serde_yaml", "dep:font-kit", "dep:clap"]
macros = ["dep:esperto-macros"]

[dependencies]
frozen-collections = { version = "0.9.1", default-features = false, features = ["std"] }
tinyset = "0.5.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"], optional = true }

# Demo
sdl3 = { version = "0.18.0", features = ["ttf"], optional = true }
serde_yaml = { version = "0.9.34", optional = true }
font-kit = { version = "0.14.3", optional = true }
clap = { version = "4.5.60", features = ["derive"], optional = true }
esperto-macros = { version = "0.7.0", path = "../esperto-macros", optional = true }

[[example]]
name = "sdl-demo"
required-features = ["demo", "macros"]
